# ai-analyze

./: .env.example  .gitignore  AI_ENHANCED_ANALYSIS.md  Makefile  QUICK_START.md  README.md  README.zh-CN.md  TODO.md  UV_GUIDE.md  clean_target_project.sh  environment.yml  pyproject.toml  requirements.txt  setup_conda.sh  setup_uv.sh  test_filename_format.py  test_integration.py  test_parallel_execution.sh  test_timestamps.py
.ai-analyze-cache/: b00d29fcdeb6_cache.json
.github/workflows/: ci.yml  publish.yml
docs/: FEATURES.md  FRAMEWORK_UPGRADE.md  INDEX.md  OPTIMIZATION_HISTORY.md  QUICK_START.md
examples/: serena_example.py
scripts/: ci-verify.sh
src/: __init__.py  analysis_api.py  analysis_integration.py  ast_analyzer.py  ast_rules.py  ast_visualizer.py  benchmark.py  cache_warmer.py  cli.py  config.py  data_store.py  exceptions.py  incremental_analyzer.py  language_backend.py  logger.py  mcp_server.py  memory.py  multi_level_cache.py  pr_diff.py  progress.py  quality_score.py  report_system.py  retry.py  serena_client.py  serena_stdio_client.py  similarity.py  unified_analyzer.py
src/analyzers/: __init__.py  dependency_graph.py  performance_analyzer.py  quality_score.py  security_scanner.py  similarity.py  tech_debt.py
src/backends/: __init__.py  language_backend.py  serena_client.py
src/infrastructure/: __init__.py  cache_warmer.py  config.py  exceptions.py  logger.py  memory.py
src/reports/: __init__.py  ast_visualizer.py  sarif_report.py
src/server/: __init__.py  analysis_api.py  analysis_integration.py  mcp_server.py
src/tools/: __init__.py  cli.py  plugin_system.py  pr_diff.py  unified_analyzer.py
tests/: test_analysis_api.py  test_analysis_integration.py  test_ast_analyzer.py  test_ast_rules.py  test_ast_visualizer.py  test_benchmark.py  test_benchmark_ext.py  test_cache_warmer.py  test_config.py  test_coverage_ext.py  test_data_store.py  test_dependency_graph.py  test_exceptions.py  test_filename_format.py  test_incremental_analyzer.py  test_integration.py  test_language_backend.py  test_large_project_strategy.py  test_logger.py  test_memory.py  test_multi_level_cache.py  test_performance.py  test_performance_analyzer.py  test_plugin_system.py  test_pr_diff.py  test_progress.py  test_progress_extensions.py  test_quality_score.py  test_report_system.py  test_retry.py  test_sarif_report.py  test_security_scanner.py  test_serena_client.py  test_serena_direct_client.py  test_similarity.py  test_stdio_client.py  test_tech_debt.py  test_timestamps.py  test_unified_analyzer.py
tools/: ai_enhanced_analyzer.py  analyze_project_multilang.py  analyze_with_ai.py  ast_analyzer_tool.py  ast_integration.py  clean_generated_files.py  docker_generator.py  full_analyzer.py  smart_docker_config.py
