[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-project-analyzer"
version = "0.3.0"
description = "Code analysis toolkit based on AST analysis and MCP protocol, with security scanning, quality scoring, and Docker generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Erishen"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "psutil>=5.9.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=1.3.0",
    "astroid>=3.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
redis = [
    "redis>=4.0.0",
]
serena = [
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
ai-analyze = "src.tools.cli:main"
ai-analyze-mcp = "src.server.mcp_server:main"

[project.urls]
"Homepage" = "https://github.com/erishen/ai-analyze"
"Repository" = "https://github.com/erishen/ai-analyze.git"
"Issue Tracker" = "https://github.com/erishen/ai-analyze/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]